--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-
   "dependencies": {
     "@angular/animations": "^4.1.3",
     "@angular/common": "^4.0.0",
@@ -18,6 +17,7 @@
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "hammer-timejs": "^1.1.0",
+    "hammer-touchemulator": "0.0.2",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "typescript": "~2.2.0",
