--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "node-sass": "^4.5.3",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "tslint": "~4.5.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.6",
